sandc/test/fixtures/astRegression/shouldFail/productions/ifPseudex/IfBlockStatement.sand
pub class IfBlockStatement {
    foo() {
        let a = if cond {
            foo();
        } else {
            b
        };
    }
}